...
            "state" : "translated",
            "value" : "Chào mừng đến với MobiCure"
          }
        }
      }
    },
    "Chat history" : {
      "comment" : "A label for the chat history button.",
      "isCommentAutoGenerated" : true
    },
    "Chat History" : {

    },
...
      "extractionState" : "stale",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Got it"
          }
        },
        "vi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Đã hiểu"
...
    "Gọi 115" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Call 115"
          }
        },
        "vi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gọi 115"
...
    "Không thể gọi điện" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unable to place call"
          }
        },
        "vi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Không thể gọi điện"
...
